# ecommerce-portfolio

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.test.yaml
.github/workflows/: ci.yml
ecommerce-admin/: eslint.config.mjs  package.json  pnpm-lock.yaml
ecommerce-admin/.agent/rules/: general-rules.md  react-rules.md
ecommerce-admin/src/actions/: auth.ts
ecommerce-admin/src/app/: layout.tsx
ecommerce-admin/src/components/: SignOut.tsx  app-sidebar.tsx  product-form.tsx
ecommerce-admin/src/entities/: customer.ts  order.ts
ecommerce-admin/src/lib/: utils.ts
ecommerce-admin/src/services/: api.ts  categories.ts  orders.ts  products.ts
ecommerce-backend/: .env.example  .gitignore  endpoints.http  logging_config.json  pyproject.toml  railway.json  seed.py
ecommerce-backend/.agent/rules/: python.md
ecommerce-backend/alembic/: env.py
ecommerce-backend/alembic/versions/: 3325e43336af_first_migration.py
ecommerce-backend/app/: config.py  db.py  main.py  schemas.py  users.py
ecommerce-backend/app/routers/: carts.py  categories.py  customers.py  health.py  orders.py  products.py
ecommerce-backend/app/services/: carts.py  customers.py  orders.py  products.py
ecommerce-backend/app/tests/: conftest.py  test_carts.py  test_categories.py  test_customers.py  test_health.py  test_orders.py  test_products.py
ecommerce-storefront/: README.md  next.config.ts  package.json  pnpm-lock.yaml
ecommerce-storefront/.agent/rules/: general-rules.md  react-rules.md
ecommerce-storefront/src/: proxy.ts
ecommerce-storefront/src/actions/: auth.ts  cart.ts  orders.ts
ecommerce-storefront/src/app/: layout.tsx  page.tsx
ecommerce-storefront/src/components/: AddToCartButton.tsx  CartItem.tsx  CartSummary.tsx  Navbar.tsx  ProductCard.tsx  ThemeToggle.tsx  UserMenu.tsx  app-sidebar-menu.tsx  dashboard-skeleton.tsx  product-form.tsx  status-badge.tsx
ecommerce-storefront/src/entities/: api.ts  cart.ts  error.ts  (+4 more)
ecommerce-storefront/tests/: example.spec.ts
(+46 files in other folders)
